[gd_scene load_steps=9 format=2]

[ext_resource path="res://interface/NewResourceCostList.gd" type="Script" id=1]
[ext_resource path="res://assets/interfaces/loading-screen/prof-desc-bgd-border.png" type="Texture" id=2]
[ext_resource path="res://assets/interfaces/loading-screen/prof-desc-bgd.png" type="Texture" id=3]
[ext_resource path="res://fonts/roboto_24.tres" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="ResourceCostList" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 0, 88 )

[node name="bgd2" type="Control" parent="Node2D"]
margin_top = -88.0
margin_right = 40.0
margin_bottom = -48.0

[node name="TextureRect2" type="TextureRect" parent="Node2D/bgd2"]
margin_left = -35.0
margin_right = 169.0
margin_bottom = 204.0
rect_scale = Vector2( 5.8, 3.5 )
texture = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="Node2D/bgd2"]
modulate = Color( 0.113725, 0.733333, 1, 1 )
margin_left = -23.936
margin_top = 76.9264
margin_right = 146.064
margin_bottom = 246.926
rect_scale = Vector2( 6.8, 3.6 )
texture = ExtResource( 3 )

[node name="title" type="Label" parent="."]
margin_left = 304.208
margin_top = 26.0565
margin_right = 873.208
margin_bottom = 79.0565
custom_fonts/font = SubResource( 1 )
text = "Resource-based Moveset Costs and Gains"

[node name="Rows" type="VBoxContainer" parent="."]
margin_left = 24.0
margin_top = 113.0
margin_right = 1001.0
margin_bottom = 629.0

[node name="header" type="HBoxContainer" parent="Rows"]
margin_right = 1074.0
margin_bottom = 36.0

[node name="name" type="Label" parent="Rows/header"]
margin_right = 450.0
margin_bottom = 36.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = SubResource( 2 )
text = "Name"

[node name="resourceType" type="Label" parent="Rows/header"]
margin_left = 454.0
margin_right = 704.0
margin_bottom = 36.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 2 )
text = "Resource Type"

[node name="default" type="Label" parent="Rows/header"]
margin_left = 708.0
margin_right = 823.0
margin_bottom = 36.0
rect_min_size = Vector2( 115, 0 )
custom_fonts/font = SubResource( 2 )
text = "Default"

[node name="actual" type="Label" parent="Rows/header"]
margin_left = 827.0
margin_right = 1074.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "With Proficiencies"

[node name="ripost" type="HBoxContainer" parent="Rows"]
editor/display_folded = true
margin_top = 40.0
margin_right = 1074.0
margin_bottom = 76.0

[node name="name" type="Label" parent="Rows/ripost"]
margin_right = 450.0
margin_bottom = 36.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = SubResource( 2 )
text = "Ripost"

[node name="resourceType" type="Label" parent="Rows/ripost"]
margin_left = 454.0
margin_right = 704.0
margin_bottom = 36.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 2 )
text = "Ability Bar"

[node name="default" type="Label" parent="Rows/ripost"]
margin_left = 708.0
margin_right = 823.0
margin_bottom = 36.0
rect_min_size = Vector2( 115, 0 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="actual" type="Label" parent="Rows/ripost"]
margin_left = 827.0
margin_right = 844.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="counterRipost" type="HBoxContainer" parent="Rows"]
editor/display_folded = true
margin_top = 80.0
margin_right = 1074.0
margin_bottom = 116.0

[node name="name" type="Label" parent="Rows/counterRipost"]
margin_right = 450.0
margin_bottom = 36.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = SubResource( 2 )
text = "Counter Ripost"

[node name="resourceType" type="Label" parent="Rows/counterRipost"]
margin_left = 454.0
margin_right = 704.0
margin_bottom = 36.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 2 )
text = "Ability Bar"

[node name="default" type="Label" parent="Rows/counterRipost"]
margin_left = 708.0
margin_right = 823.0
margin_bottom = 36.0
rect_min_size = Vector2( 115, 0 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="actual" type="Label" parent="Rows/counterRipost"]
margin_left = 827.0
margin_right = 844.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="autoRipost" type="HBoxContainer" parent="Rows"]
editor/display_folded = true
margin_top = 120.0
margin_right = 1074.0
margin_bottom = 156.0

[node name="name" type="Label" parent="Rows/autoRipost"]
margin_right = 450.0
margin_bottom = 36.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = SubResource( 2 )
text = "Auto Ripost"

[node name="resourceType" type="Label" parent="Rows/autoRipost"]
margin_left = 454.0
margin_right = 704.0
margin_bottom = 36.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 2 )
text = "Ability Bar"

[node name="default" type="Label" parent="Rows/autoRipost"]
margin_left = 708.0
margin_right = 823.0
margin_bottom = 36.0
rect_min_size = Vector2( 115, 0 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="actual" type="Label" parent="Rows/autoRipost"]
margin_left = 827.0
margin_right = 844.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="tech" type="HBoxContainer" parent="Rows"]
editor/display_folded = true
margin_top = 160.0
margin_right = 1074.0
margin_bottom = 196.0

[node name="name" type="Label" parent="Rows/tech"]
margin_right = 450.0
margin_bottom = 36.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = SubResource( 2 )
text = "Tech"

[node name="resourceType" type="Label" parent="Rows/tech"]
margin_left = 454.0
margin_right = 704.0
margin_bottom = 36.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 2 )
text = "Ability Bar"

[node name="default" type="Label" parent="Rows/tech"]
margin_left = 708.0
margin_right = 823.0
margin_bottom = 36.0
rect_min_size = Vector2( 115, 0 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="actual" type="Label" parent="Rows/tech"]
margin_left = 827.0
margin_right = 844.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="push-block" type="HBoxContainer" parent="Rows"]
editor/display_folded = true
margin_top = 200.0
margin_right = 1074.0
margin_bottom = 236.0

[node name="name" type="Label" parent="Rows/push-block"]
margin_right = 450.0
margin_bottom = 36.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = SubResource( 2 )
text = "Push Block"

[node name="resourceType" type="Label" parent="Rows/push-block"]
margin_left = 454.0
margin_right = 704.0
margin_bottom = 36.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 2 )
text = "Ability Bar"

[node name="default" type="Label" parent="Rows/push-block"]
margin_left = 708.0
margin_right = 823.0
margin_bottom = 36.0
rect_min_size = Vector2( 115, 0 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="actual" type="Label" parent="Rows/push-block"]
margin_left = 827.0
margin_right = 844.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="abilityCancel" type="HBoxContainer" parent="Rows"]
editor/display_folded = true
margin_top = 240.0
margin_right = 1074.0
margin_bottom = 276.0

[node name="name" type="Label" parent="Rows/abilityCancel"]
margin_right = 450.0
margin_bottom = 36.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = SubResource( 2 )
text = "Ability Cancel Base Cost"

[node name="resourceType" type="Label" parent="Rows/abilityCancel"]
margin_left = 454.0
margin_right = 704.0
margin_bottom = 36.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 2 )
text = "Ability Bar"

[node name="default" type="Label" parent="Rows/abilityCancel"]
margin_left = 708.0
margin_right = 823.0
margin_bottom = 36.0
rect_min_size = Vector2( 115, 0 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="actual" type="Label" parent="Rows/abilityCancel"]
margin_left = 827.0
margin_right = 844.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="airAbilityCancel" type="HBoxContainer" parent="Rows"]
editor/display_folded = true
margin_top = 280.0
margin_right = 1074.0
margin_bottom = 316.0

[node name="name" type="Label" parent="Rows/airAbilityCancel"]
margin_right = 450.0
margin_bottom = 36.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = SubResource( 2 )
text = "Air Ability Cancel Base Cost"

[node name="resourceType" type="Label" parent="Rows/airAbilityCancel"]
margin_left = 454.0
margin_right = 704.0
margin_bottom = 36.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 2 )
text = "Ability Bar"

[node name="default" type="Label" parent="Rows/airAbilityCancel"]
margin_left = 708.0
margin_right = 823.0
margin_bottom = 36.0
rect_min_size = Vector2( 115, 0 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="actual" type="Label" parent="Rows/airAbilityCancel"]
margin_left = 827.0
margin_right = 844.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="autoAbilityCancel" type="HBoxContainer" parent="Rows"]
editor/display_folded = true
margin_top = 320.0
margin_right = 1074.0
margin_bottom = 356.0

[node name="name" type="Label" parent="Rows/autoAbilityCancel"]
margin_right = 450.0
margin_bottom = 36.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = SubResource( 2 )
text = "Auto Ability Cancel Base Cost"

[node name="resourceType" type="Label" parent="Rows/autoAbilityCancel"]
margin_left = 454.0
margin_right = 704.0
margin_bottom = 36.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 2 )
text = "Ability Bar"

[node name="default" type="Label" parent="Rows/autoAbilityCancel"]
margin_left = 708.0
margin_right = 823.0
margin_bottom = 36.0
rect_min_size = Vector2( 115, 0 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="actual" type="Label" parent="Rows/autoAbilityCancel"]
margin_left = 827.0
margin_right = 844.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="provokeGuardBreak" type="HBoxContainer" parent="Rows"]
editor/display_folded = true
margin_top = 360.0
margin_right = 1074.0
margin_bottom = 396.0

[node name="name" type="Label" parent="Rows/provokeGuardBreak"]
margin_right = 450.0
margin_bottom = 36.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = SubResource( 2 )
text = "Provoke Guard Break"

[node name="resourceType" type="Label" parent="Rows/provokeGuardBreak"]
margin_left = 454.0
margin_right = 704.0
margin_bottom = 36.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 2 )
text = "Ability Bar"

[node name="default" type="Label" parent="Rows/provokeGuardBreak"]
margin_left = 708.0
margin_right = 823.0
margin_bottom = 36.0
rect_min_size = Vector2( 115, 0 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="actual" type="Label" parent="Rows/provokeGuardBreak"]
margin_left = 827.0
margin_right = 844.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="magicSeries" type="HBoxContainer" parent="Rows"]
editor/display_folded = true
margin_top = 400.0
margin_right = 1074.0
margin_bottom = 436.0

[node name="name" type="Label" parent="Rows/magicSeries"]
margin_right = 450.0
margin_bottom = 36.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = SubResource( 2 )
text = "Magic Series Combo"

[node name="resourceType" type="Label" parent="Rows/magicSeries"]
margin_left = 454.0
margin_right = 704.0
margin_bottom = 36.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 2 )
text = "Ability Bar"

[node name="default" type="Label" parent="Rows/magicSeries"]
margin_left = 708.0
margin_right = 823.0
margin_bottom = 36.0
rect_min_size = Vector2( 115, 0 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="actual" type="Label" parent="Rows/magicSeries"]
margin_left = 827.0
margin_right = 844.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="airborne-magicSeries" type="HBoxContainer" parent="Rows"]
editor/display_folded = true
margin_top = 440.0
margin_right = 1074.0
margin_bottom = 476.0

[node name="name" type="Label" parent="Rows/airborne-magicSeries"]
margin_right = 450.0
margin_bottom = 36.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = SubResource( 2 )
text = "Air Magic Series Combo"

[node name="resourceType" type="Label" parent="Rows/airborne-magicSeries"]
margin_left = 454.0
margin_right = 704.0
margin_bottom = 36.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 2 )
text = "Ability Bar"

[node name="default" type="Label" parent="Rows/airborne-magicSeries"]
margin_left = 708.0
margin_right = 823.0
margin_bottom = 36.0
rect_min_size = Vector2( 115, 0 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="actual" type="Label" parent="Rows/airborne-magicSeries"]
margin_left = 827.0
margin_right = 844.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="grab" type="HBoxContainer" parent="Rows"]
editor/display_folded = true
margin_top = 480.0
margin_right = 1074.0
margin_bottom = 516.0

[node name="name" type="Label" parent="Rows/grab"]
margin_right = 450.0
margin_bottom = 36.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = SubResource( 2 )
text = "Grab"

[node name="resourceType" type="Label" parent="Rows/grab"]
margin_left = 454.0
margin_right = 704.0
margin_bottom = 36.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 2 )
text = "Cooldown"

[node name="default" type="Label" parent="Rows/grab"]
margin_left = 708.0
margin_right = 823.0
margin_bottom = 36.0
rect_min_size = Vector2( 115, 0 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="actual" type="Label" parent="Rows/grab"]
margin_left = 827.0
margin_right = 844.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="airGrab" type="HBoxContainer" parent="Rows"]
editor/display_folded = true
margin_top = 520.0
margin_right = 1074.0
margin_bottom = 556.0

[node name="name" type="Label" parent="Rows/airGrab"]
margin_right = 450.0
margin_bottom = 36.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = SubResource( 2 )
text = "Air Grab"

[node name="resourceType" type="Label" parent="Rows/airGrab"]
margin_left = 454.0
margin_right = 704.0
margin_bottom = 36.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 2 )
text = "Cooldown"

[node name="default" type="Label" parent="Rows/airGrab"]
margin_left = 708.0
margin_right = 823.0
margin_bottom = 36.0
rect_min_size = Vector2( 115, 0 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="actual" type="Label" parent="Rows/airGrab"]
margin_left = 827.0
margin_right = 844.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="negativeModTemplate" type="Label" parent="."]
visible = false
margin_left = 20.0422
margin_top = 440.688
margin_right = 451.042
margin_bottom = 476.688
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.901961, 0, 0, 1 )
text = "?"

[node name="positiveModTemplate" type="Label" parent="."]
visible = false
margin_left = 48.4353
margin_top = 442.348
margin_right = 479.435
margin_bottom = 478.348
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.117647, 0.780392, 0.0196078, 1 )
text = "?"

[node name="neutralModTemplate" type="Label" parent="."]
visible = false
margin_left = 81.4353
margin_top = 442.348
margin_right = 512.435
margin_bottom = 478.348
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0.843137, 0, 1 )
text = "?"
